[package]
name = "goto"
version = "0.1.0"
authors = ["Matthew Knight <mattlknight@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
chrono = "*"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
futures = "*"
lazy_static = "*"
serde = "*"
serde_derive = "*"
#rocket = "0.4"

#[dependencies.rocket_contrib]
#version = "0.4.0"
#default-features = false
#features = ["serve", "diesel_postgres_pool"]
