[package]
name = "goto"
version = "0.1.0"
authors = ["Matthew Knight <mattlknight@gmail.com>"]
edition = "2018"

[lib]
name = "libgoto"
path = "src/lib.rs"

[[bin]]
name = "goto"
path = "src/main.rs"

[dependencies]
actix = "*"
actix-web = "0.7"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
env_logger = "*"
futures = "0.1"
lazy_static = "*"
log = "*"
serde = "*"
serde_derive = "*"

[dependencies.chrono]
version = "*"
features = ["serde"]
